# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
gendiff/: cli.py  engine.py  gen_diff.py  gendiff.py  get_diff_tree.py  parser.py  stylish.py
gendiff/formaters/: json_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: jsontest.json  testdatas.py  testfile1.json  testfile2.json
