[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Second project with Hexlet - gendifferencies"
authors = ["Oleg Kharitonov <o_kharitonov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
